Fix overflow on :host to display scroll

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,3 +1,3 @@
 ion-app{
-    background-color: #f2f2ef;;
+    background-color: #f2f2ef;
 }
